apps/wikijs/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wikijs
  namespace: wikijs
  labels:
    app: wikijs
spec:
  replicas: 1
  selector:
    matchLabels:
      app: wikijs
  template:
    metadata:
      labels:
        app: wikijs
    spec:
      enableServiceLinks: false
      automountServiceAccountToken: false
      securityContext:
        runAsUser: 1000
        runAsGroup: 1000
        fsGroup: 1000

      containers:
        - name: wikijs
          image: ghcr.io/requarks/wiki:2.5.316
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3000
          resources:
            requests:
              cpu: "100m"
              memory: "256Mi"
            limits:
              cpu: "500m"
              memory: "1Gi"
          securityContext:
            runAsNonRoot: true
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            seccompProfile:
              type: "RuntimeDefault"
            capabilities:
              drop:
                - ALL
          readinessProbe:
            httpGet:
              path: /healthz
              port: 3000
            initialDelaySeconds: 15
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /healthz
              port: 3000
            initialDelaySeconds: 30
            periodSeconds: 10
            failureThreshold: 3

          volumeMounts:
            - name: wikijs-data
              mountPath: /wiki/data
            - name: cache
              mountPath: /wiki/data/cache
            - name: repo
              mountPath: /wiki/data/repo
            - name: home
              mountPath: /home/node
      volumes:
        - name: wikijs-data
          persistentVolumeClaim:
            claimName: wikijs-pvc
        - name: cache
          emptyDir: {}
        - name: repo
          emptyDir: {}
        - name: home
          emptyDir: {}
