apps/wikijs/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: wikijs
  namespace: wikijs
spec:
  selector:
    app: wikijs
  ports:
    - port: 80
      targetPort: 3000
